force-app/main/default/objects/Investment_Lot__c/Investment_Lot__c.object-meta.xml
<CustomObject>
    <label>Investment Lot</label>
    <nameField>
        <displayFormat>LOT-{0000}</displayFormat>
        <label>Lot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Lots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>