force-app/main/default/objects/Investment_Lot__c/fields/Investor__c.field-meta.xml
<CustomField>
    <fullName>Investor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investor</label>
    <referenceTo>Investor__c</referenceTo>
    <relationshipLabel>Investment Lots (Investor)</relationshipLabel>
    <relationshipName>Investment_Lots1</relationshipName>
    <type>Lookup</type>
</CustomField>