force-app/main/default/objects/Investment_Lot__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Lot Number</label>
    <type>AutoNumber</type>
</CustomField>