force-app/main/default/objects/Investment_Lot__c/fields/Owned_By__c.field-meta.xml
<CustomField>
    <fullName>Owned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owned By</label>
    <referenceTo>Investor__c</referenceTo>
    <relationshipName>Investment_Lots</relationshipName>
    <type>Lookup</type>
</CustomField>