force-app/main/default/objects/Investment_Lot__c/fields/Price_per_Lot__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Lot__c</fullName>
    <description>Price of this individual lot</description>
    <label>Price per Lot</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>